--- a/tests.yml
+++ b/tests.yml
@@ -1,3 +1,3 @@
-repo_owner: ваш_логин_на_гитхабе
-kittygram_domain: полная ссылка (http://<ip-адрес вашей ВМ>:<порт gateway>) на ваш проект Kittygram
-dockerhub_username: ваш_логин_на_докерхабе 
+repo_owner: praeitor
+kittygram_domain: http://130.193.44.149:80
+dockerhub_username: praeitor
