--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: DockerHub login 
+
+      - name: DockerHub login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      
       - name: Build and push Docker images
         run: |
           docker build -t praeitor/kittygram_backend ./backend
@@ -38,6 +40,16 @@ jobs:
           docker push praeitor/kittygram_frontend
           docker build -t praeitor/kittygram_gateway ./nginx
           docker push praeitor/kittygram_gateway
+      
+      - name: Upload docker-compose.production.yml to server
+        uses: appleboy/scp-action@v0.1.5
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "./docker-compose.production.yml"
+          target: "~/kittygram/docker-compose.production.yml"
+
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.3
         with:
