--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,11 @@ on:
       - main
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -20,18 +21,18 @@ jobs:
       - name: Run backend tests
         run: |
           python backend/manage.py test
-  build-and-deploy:
-    needs: test
+
+  push-docker-image:
+    needs: tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: DockerHub login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
       - name: Build and push Docker images
         run: |
           docker build -t praeitor/kittygram_backend ./backend
@@ -40,17 +41,20 @@ jobs:
           docker push praeitor/kittygram_frontend
           docker build -t praeitor/kittygram_gateway ./nginx
           docker push praeitor/kittygram_gateway
-      
-      - name: Upload docker-compose.production.yml to server
+
+  deploy:
+    needs: push-docker-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to server
         uses: appleboy/scp-action@v0.1.5
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./docker-compose.production.yml"
-          target: "~/kittygram/docker-compose.production.yml"
-
-      - name: Deploy to server
+          source: "./docker-compose.yml"
+          target: "~/kittygram/docker-compose.yml"
+      - name: Run deployment script
         uses: appleboy/ssh-action@v0.1.3
         with:
           host: ${{ secrets.SERVER_IP }}
@@ -60,8 +64,24 @@ jobs:
             cd ~/kittygram
             docker-compose pull
             docker-compose up -d
-  notify:
-    needs: build-and-deploy
+
+  auto_tests:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run auto-tests
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/kittygram
+            docker exec backend python manage.py test
+            docker exec frontend npm test
+
+  telegram-notify:
+    needs: auto_tests
     runs-on: ubuntu-latest
     steps:
       - name: Notify in Telegram
@@ -69,4 +89,5 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: "Kittygram successfully deployed!"
+          message: |
+            Kittygram successfully deployed and passed all tests!
