--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
           source: "./docker-compose.yml"
-          target: "~/kittygram/docker-compose.yml"
+          target: "~/kittygram/"
       - name: Run deployment script
         uses: appleboy/ssh-action@v0.1.3
         with:
