--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
           python-version: 3.9
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip 
           pip install -r backend/requirements.txt
       - name: Run backend tests
         run: |
@@ -52,7 +53,7 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./docker-compose.yml"
+          source: "./docker-compose.production.yml"
           target: "~/kittygram/"
       - name: Run deployment script
         uses: appleboy/ssh-action@v0.1.3
