--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   tests:
+    name: "Tests"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -24,6 +25,7 @@ jobs:
           python backend/manage.py test
 
   push-docker-image:
+    name: "Push Docker Image to DockerHub"
     needs: tests
     runs-on: ubuntu-latest
     steps:
@@ -44,6 +46,7 @@ jobs:
           docker push praeitor/kittygram_gateway
 
   deploy:
+    name: "Deploy"
     needs: push-docker-image
     runs-on: ubuntu-latest
     steps:
@@ -53,8 +56,8 @@ jobs:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./docker-compose.production.yml"
-          target: "~/kittygram/"
+          source: "docker-compose.production.yml"
+          target: "kittygram"
       - name: Run deployment script
         uses: appleboy/ssh-action@v0.1.3
         with:
@@ -62,11 +65,12 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/kittygram
+            cd kittygram
             docker-compose pull
             docker-compose up -d
 
   auto_tests:
+    name: "Auto Tests"
     needs: deploy
     runs-on: ubuntu-latest
     steps:
@@ -82,6 +86,7 @@ jobs:
             docker exec frontend npm test
 
   telegram-notify:
+    name: "Telegram Notify"
     needs: auto_tests
     runs-on: ubuntu-latest
     steps:
