--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - name: Deploy to server
-        uses: appleboy/scp-action@v0.1.5
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
@@ -61,7 +61,7 @@ jobs:
           source: "docker-compose.production.yml"
           target: "kittygram"
       - name: Run deployment script
-        uses: appleboy/ssh-action@v0.1.3
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
@@ -71,8 +71,8 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml pull
             sudo docker-compose -f docker-compose.production.yml down
             sudo docker-compose -f docker-compose.production.yml up -d
-            sudo docker-compose -f docker-compose.production.yml exec backend python3 manage.py migrate
-            sudo docker-compose -f docker-compose.production.yml exec backend python3 manage.py collectstatic
+            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py migrate
+            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic
             sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /static/static/
             sudo docker system prune -af
 
