changed ip and add tests to pipline

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,9 +1,34 @@
 server {
-  listen 80;
-  index index.html;
+    listen 80;
+    index index.html;
+    server_tokens off;
 
-  location / {
-    alias /static/;
-    try_files $uri $uri/ /index.html;
-  }
+    # Статические файлы
+    location / {
+        alias /static/;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Медиафайлы (загруженные пользователями)
+    location /media/ {
+        alias /media/;
+    }
+
+    # Проксирование запросов к API
+    location /api/ {
+        proxy_pass http://backend:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проксирование запросов к админке
+    location /admin/ {
+        proxy_pass http://backend:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
