--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,21 +76,21 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /static/static/
             sudo docker system prune -af
 
-#   auto_tests:
-#     name: "Auto Tests"
-#     needs: deploy
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Run auto-tests
-#         uses: appleboy/ssh-action@v0.1.3
-#         with:
-#           host: ${{ secrets.SERVER_IP }}
-#           username: ${{ secrets.SERVER_USER }}
-#           key: ${{ secrets.SSH_KEY }}
-#           script: |
-#             cd ~/kittygram
-#             docker exec backend python manage.py test
-#             docker exec frontend npm test
+  auto_tests:
+    name: "Auto Tests"
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run auto-tests
+        uses: appleboy/ssh-action@v0.1.3
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/kittygram
+            docker exec backend python manage.py test
+            docker exec frontend npm test
 
   telegram-notify:
     name: "Telegram Notify"
