--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run auto-tests
-        uses: appleboy/ssh-action@v0.1.3
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USER }}
@@ -94,8 +94,7 @@ jobs:
 
   telegram-notify:
     name: "Telegram Notify"
-    # needs: auto_tests
-    needs: deploy
+    needs: auto_tests
     runs-on: ubuntu-latest
     steps:
       - name: Notify in Telegram
