--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install -r backend/requirements.txt
+          pip install flake8
       - name: Run backend tests
         run: |
+          flake8 backend/ --max-line-length=79
           python backend/manage.py test
 
   push-docker-image:
