--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,22 +9,40 @@ jobs:
   tests:
     name: "Tests"
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres_kittygram_user
+          POSTGRES_PASSWORD: postgres_kittygram_password
+          POSTGRES_DB: kittygram
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip 
+          python -m pip install --upgrade pip
+          pip install flake8 flake8-isort
           pip install -r backend/requirements.txt
           pip install flake8
       - name: Run backend tests
+        env:
+          POSTGRES_USER: postgres_kittygram_user
+          POSTGRES_PASSWORD: postgres_kittygram_password
+          POSTGRES_DB: kittygram
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
         run: |
-          flake8 backend/ --max-line-length=79
-          python backend/manage.py test
+          python -m flake8 backend/
+          cd backend/
+          python manage.py test
 
   push-docker-image:
     name: "Push Docker Image to DockerHub"
