--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 flake8-isort
+          pip install flake8==6.0.0 flake8-isort==6.0.0
           pip install -r backend/requirements.txt
           pip install flake8
       - name: Run backend tests
