--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   tests:
-    name: "Tests"
+    name: "Backend tests"
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -43,6 +43,23 @@ jobs:
           python -m flake8 backend/
           cd backend/
           python manage.py test
+
+  frontend_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up nodeJS
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: |
+          cd frontend/
+          npm ci
+      - name: Test frontend
+        run: |
+          cd frontend/
+          npm run test
 
   push-docker-image:
     name: "Push Docker Image to DockerHub"
