--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -45,7 +45,7 @@ jobs:
           python manage.py test
 
   frontend_tests:
-    name: "Backend tests"
+    name: "Frontend tests"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
