--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,4 +7,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . /app/
 
+CMD ["gunicorn", "--version"]
 CMD ["gunicorn", "--bind", "0.0.0.0:9000", "kittygram_backend.wsgi:application"]
