--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,6 +116,19 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /static/static/
             sudo docker system prune -af
 
+  run-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+      - name: Run tests
+        run: |
+          pytest tests/
+
   telegram-notify:
     name: "Telegram Notify"
   #  needs: auto_tests
