--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,19 +16,21 @@ server {
 
     # Проксирование запросов к API
     location /api/ {
-        proxy_pass http://backend:9000/;
+        proxy_pass http://backend:9000/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        client_max_body_size 20M;
     }
 
     # Проксирование запросов к админке
     location /admin/ {
-        proxy_pass http://backend:9000/;
+        proxy_pass http://backend:9000/admin;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        client_max_body_size 20M;
     }
 }
