some changes if docker compose

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,6 +10,7 @@ services:
     image: postgres:13
     container_name: postgres
     env_file: .env
+    restart: always
     volumes:
       - pg_data:/var/lib/postgresql/data
 
@@ -17,6 +18,9 @@ services:
     image: praeitor/kittygram_backend:latest
     container_name: backend
     env_file: .env
+    restart: always
+    depends_on:
+      - postgres
     volumes:
       - static:/app/static
       - media:/app/media
@@ -30,8 +34,12 @@ services:
   gateway:
     image: praeitor/kittygram_gateway:latest
     container_name: gateway
+    env_file: .env
+    restart: always
+    depends_on:
+      - backend
     ports:
-      - "9000:80"
+      - "80:80"
     volumes:
       - static:/static
       - media:/media
