some changes in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,17 @@ server {
     index index.html;
     server_tokens off;
 
-    # Статические файлы
-    location / {
-        alias /static/;
-        try_files $uri $uri/ /index.html;
+    # Проксирование запросов к API
+    location /api/ {
+        proxy_pass http://backend:9000/api/;
+        proxy_set_header Host $http_host;
+
+    }
+
+    # Проксирование запросов к админке
+    location /admin/ {
+        proxy_pass http://backend:9000/admin/;
+        proxy_set_header Host $http_host;
     }
 
     # Медиафайлы (загруженные пользователями)
@@ -14,16 +21,9 @@ server {
         alias /media/;
     }
 
-    # Проксирование запросов к API
-    location /api/ {
-        proxy_pass http://backend:9000/api;
-        proxy_set_header Host $host;
-
-    }
-
-    # Проксирование запросов к админке
-    location /admin/ {
-        proxy_pass http://backend:9000/admin;
-        proxy_set_header Host $host;
+    # Статические файлы
+    location / {
+        alias /static/;
+        try_files $uri $uri/ /index.html;
     }
 }
