changes in nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,27 +3,42 @@ server {
     index index.html;
     server_tokens off;
 
-    # Проксирование запросов к API
+    # Проксирование API-запросов
     location /api/ {
         proxy_pass http://backend:9000/api/;
-        proxy_set_header Host $http_host;
-
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Проксирование запросов к админке
+    # Проксирование админки Django
     location /admin/ {
         proxy_pass http://backend:9000/admin/;
-        proxy_set_header Host $http_host;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Медиафайлы (загруженные пользователями)
+    # Обслуживание статических файлов
+    location /static/ {
+        alias /static/;
+        autoindex off;
+    }
+
+    # Обслуживание медиафайлов (загруженных пользователями)
     location /media/ {
         alias /media/;
+        autoindex off;
     }
 
-    # Статические файлы
+    # Обработка всех остальных запросов
     location / {
-        alias /static/;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://backend:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
