--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,8 +112,7 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml down
             sudo docker-compose -f docker-compose.production.yml up -d
             sudo docker-compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-            sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /static/static/
+            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic  --no-input
             sudo docker system prune -af
 
   telegram-notify:
