--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,24 +21,16 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Обслуживание статических файлов
-    location /static/ {
-        alias /static/;
-        autoindex off;
-    }
-
     # Обслуживание медиафайлов (загруженных пользователями)
     location /media/ {
         alias /media/;
         autoindex off;
     }
 
-    # Обработка всех остальных запросов
+    # Обслуживание статических файлов
     location / {
-        proxy_pass http://backend:9000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        alias /static/;
+        try_files $uri $uri/ /index.html;
     }
+
 }
