docker compose changes

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,6 +28,7 @@ services:
   frontend:
     image: praeitor/kittygram_frontend:latest
     container_name: frontend
+    command: cp -r /app/build/. /static/
     volumes:
       - static:/app/build
   
