--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           POSTGRES_USER: postgres_kittygram_user
           POSTGRES_PASSWORD: postgres_kittygram_password
           POSTGRES_DB: kittygram
-          DB_HOST: 127.0.0.1
+          DB_HOST: postgres
           DB_PORT: 5432
         run: |
           python -m flake8 backend/
