nginx conf changes 1

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,7 +29,7 @@ server {
 
     # Обслуживание статических файлов
     location / {
-        alias /static;
+        alias /static/;
         try_files $uri $uri/ /index.html;
     }
 
