--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -29,7 +29,7 @@ services:
     image: praeitor/kittygram_frontend:latest
     container_name: frontend
     volumes:
-      - static:/app/build
+      - static:/app/build/static
   
   gateway:
     image: praeitor/kittygram_gateway:latest
