--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,15 +21,22 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Статические файлы Django
+    location /static/ {
+        alias /static/;
+        autoindex off;
+    }
+
     # Обслуживание медиафайлов (загруженных пользователями)
     location /media/ {
         alias /media/;
         autoindex off;
     }
 
-    # Обслуживание статических файлов
+    # Обслуживание Frontend
     location / {
-        alias /static/;
+        root /static;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
