--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,22 +21,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Статические файлы Django
-    location /static/ {
-        alias /static/;
-        autoindex off;
-    }
-
     # Обслуживание медиафайлов (загруженных пользователями)
     location /media/ {
         alias /media/;
         autoindex off;
     }
 
-    # Обслуживание Frontend
+    # Обслуживание статических файлов
     location / {
-        root /static;
-        index index.html;
+        root /static/;
         try_files $uri $uri/ /index.html;
     }
 
