--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,8 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml down
             sudo docker-compose -f docker-compose.production.yml up -d
             sudo docker-compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic  --no-input
+            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic --no-input
+            sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /app/static/static/
             sudo docker system prune -af
 
   telegram-notify:
