some changes in compose

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -28,8 +28,9 @@ services:
   frontend:
     image: praeitor/kittygram_frontend:latest
     container_name: frontend
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/app/build/static
+      - static:/frontend_static
   
   gateway:
     image: praeitor/kittygram_gateway:latest
