remove sensetive data from settings

--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -37,7 +37,7 @@ jobs:
           POSTGRES_USER: postgres_kittygram_user
           POSTGRES_PASSWORD: postgres_kittygram_password
           POSTGRES_DB: kittygram
-          DB_HOST: 127.0.0.1
+          DB_HOST: postgres
           DB_PORT: 5432
         run: |
           python -m flake8 backend/
@@ -112,8 +112,8 @@ jobs:
             sudo docker-compose -f docker-compose.production.yml down
             sudo docker-compose -f docker-compose.production.yml up -d
             sudo docker-compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-            sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /static/static/
+            sudo docker-compose -f docker-compose.production.yml exec backend python manage.py collectstatic --no-input
+            sudo docker-compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /app/static/static/
             sudo docker system prune -af
 
   telegram-notify:
