--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -13,9 +13,9 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_USER: postgres_kittygram_user
-          POSTGRES_PASSWORD: postgres_kittygram_password
-          POSTGRES_DB: kittygram
+          POSTGRES_USER: ${{ secrets.dbuser }}
+          POSTGRES_PASSWORD: ${{ secrets.dbpass }}
+          POSTGRES_DB: ${{ secrets.dbname }}
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -34,12 +34,13 @@ jobs:
           pip install flake8
       - name: Run backend tests
         env:
-          POSTGRES_USER: postgres_kittygram_user
-          POSTGRES_PASSWORD: postgres_kittygram_password
-          POSTGRES_DB: kittygram
+          POSTGRES_USER: ${{ secrets.dbuser }}
+          POSTGRES_PASSWORD: ${{ secrets.dbpass }}
+          POSTGRES_DB: ${{ secrets.dbname }}
           DB_HOST: postgres
           DB_PORT: 5432
         run: |
+          export SECRET_KEY='${{ secrets.SECRET_KEY }}'
           python -m flake8 backend/
           cd backend/
           python manage.py test
@@ -118,7 +119,6 @@ jobs:
 
   telegram-notify:
     name: "Telegram Notify"
-  #  needs: auto_tests
     needs: deploy
     runs-on: ubuntu-latest
     steps:
